Rebranded to Exilence Next

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "APP": {
-    "TITLE": "Exilence 2"
+    "TITLE": "Exilence Next"
   },
   "ERROR": {
     "COOKIE_NOT_SET_TITLE": "Cookie could not be set",
