--- a/ExilenceNextClient/src/assets/i18n/en.json
+++ b/ExilenceNextClient/src/assets/i18n/en.json
@@ -3,11 +3,12 @@
     "TITLE": "Exilence Next"
   },
   "ERROR": {
-    "UNAUTHORIZED": "The sessionId or account is incorrect",
+    "UNAUTHORIZED": "The session id is incorrect",
+    "NOT_FOUND": "The resource was not found, double-check the account",
     "COOKIE_NOT_SET_TITLE": "Cookie could not be set",
     "COOKIE_NOT_SET_DESC": "An error occured when setting the cookie",
     "SESSION_NOT_VALID_TITLE": "The session is not valid",
-    "SESSION_NOT_VALID_DESC": "The session could not be validated, please verify that your account and sessionId is correct"
+    "SESSION_NOT_VALID_DESC": "The session could not be validated, please verify that your account and session id is correct"
   },
   "INFORMATION": {
     "COOKIE_SET_TITLE": "Created a session cookie",
