Changed value label

--- a/ExilenceNextClient/src/assets/i18n/en.json
+++ b/ExilenceNextClient/src/assets/i18n/en.json
@@ -64,7 +64,7 @@
   "NETWORTH": {
     "SELECT_STASHTABS": "Select stash tabs",
     "GRAPHS": {
-      "VALUE": "Value",
+      "VALUE": "Chaos",
       "TIMESTAMP": "Timestamp",
       "HEADER": "Graphs",
       "PLAYER_GRAPH": {
