Added tab group to settings drawer

--- a/ExilenceNextClient/src/assets/i18n/en.json
+++ b/ExilenceNextClient/src/assets/i18n/en.json
@@ -78,5 +78,9 @@
     "ITEMS": {
       "HEADER": "Items"
     }
+  },
+  "SETTINGS": {
+    "GENERAL_HEADER": "General",
+    "NETWORTH_HEADER": "Net worth"
   }
 }
