Added setting for automatic snapshotting, with intervals

--- a/ExilenceNextClient/src/assets/i18n/en.json
+++ b/ExilenceNextClient/src/assets/i18n/en.json
@@ -93,7 +93,8 @@
   },
   "SETTINGS": {
     "GENERAL_HEADER": "General",
-    "NETWORTH_HEADER": "Net worth"
+    "NETWORTH_HEADER": "Net worth",
+    "TOGGLE_AUTOMATIC_SNAPSHOTS": "Automatic snapshotting"
   },
   "GLOBAL": {
     "SELECT_PLAYERS": "Select players"
