--- a/ExilenceNextApp/public/i18n/en/general.json
+++ b/ExilenceNextApp/public/i18n/en/general.json
@@ -1,8 +1,10 @@
 {
   "action.finish": "Finish",
   "action.next": "Next",
+  "action.authorize": "Authorize",
   "action.reset": "Reset",
   "action.back": "Back",
+  "action.new_profile": "New profile",
   "title.enter_acc_info": "Enter account information",
   "title.select_leagues": "Select your leagues",
   "title.select_characters": "Select your characters",
@@ -10,6 +12,8 @@
   "label.session_id": "Session Id",
   "label.select_main_league": "Select league",
   "label.select_price_league": "Select pricing league",
+  "label.select_profile": "Select profile",
   "label.select_character": "Select character",
+  "label.profile_placeholder": "Select a profile",
   "error.no_characters_in_league": "You have no characters in the selected league"
 }
