Started working on profile system

--- a/ExilenceNextApp/public/i18n/en/general.json
+++ b/ExilenceNextApp/public/i18n/en/general.json
@@ -4,7 +4,13 @@
   "action.authorize": "Authorize",
   "action.reset": "Reset",
   "action.back": "Back",
+  "action.cancel": "Cancel",
+  "action.save_profile": "Save profile",
+  "action.create_profile": "Create profile",
   "action.new_profile": "New profile",
+  "title.save_profile": "Edit profile",
+  "title.create_profile": "Create new profile",
+  "title.login": "Login",
   "title.enter_acc_info": "Enter account information",
   "title.select_leagues": "Select your leagues",
   "title.select_characters": "Select your characters",
