Started working on stash tab selection

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -26,6 +26,7 @@
     "select_price_league": "Select pricing league",
     "select_profile": "Select profile",
     "select_character": "Select character",
+    "select_stash_tabs": "Select stash tabs",
     "profile_placeholder": "Select a profile"
   }
 }
