--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -1,4 +1,13 @@
 {
-  "success.title.init_session": "Init session success",
-  "success.description.init_session": "Session was successfully initiated"
+  "success": {
+    "title": {
+      "init_session": "Init session success"
+    },
+    "description": {
+      "init_session": "Session was successfully initiated"
+    }
+  },
+  "error": {},
+  "warning": {},
+  "information": {}
 }
