--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -9,5 +9,8 @@
     "stacksize": "Stacksize",
     "calculated": "Price",
     "total": "Total"
-  }
+  },
+    "label": {
+      "stash_tab_placeholder": "No stash items found"
+    }
 }
