--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -12,6 +12,7 @@
   },
     "label": {
       "stash_tab_placeholder": "No stash items found",
+      "select_stash_tabs": "No stash items found",
       "stash_tab_dropdown_placeholder": "No stash tabs found"
     }
 }
