Repository restructuring and code cleanup

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -12,6 +12,7 @@
   },
   "title": {
     "login": "Login",
+    "net_worth": "Net worth",
     "settings": "Settings",
     "save_profile": "Edit profile",
     "create_profile": "Create new profile",
