--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -3,26 +3,40 @@
     "title": {
       "init_session": "Initialize session succeeded",
       "validate_session": "Validate session succeeded",
-      "get_stash_tabs": "Received stash tabs for {{league}}",
-      "get_items": "Received items",
+      "get_stash_tabs": "Retrieved stash tabs for {{param}}",
+      "get_items": "Retrieved items for {{param}}",
       "price_stash_items": "Items were successfully priced",
-      "get_prices_for_leagues": "Received prices for leagues",
+      "get_prices_for_leagues": "Retrieved prices for all leagues",
       "snapshot": "Snapshot created successfully"
     },
     "description": {
-      "init_session": "Session was successfully initiated",
-      "validate_session": "Session was successfully validated",
-      "get_stash_tabs": "Stash tabs successfully received for league"
+      "init_session": "A new session was successfully initiated",
+      "validate_session": "The session was successfully validated",
+      "get_stash_tabs": "Stash tabs for {{param}} were successfully retrieved",
+      "get_items": "Items for {{param}} were successfully retrieved",
+      "price_stash_items": "Items in the selected stash tabs were successfully priced",
+      "get_prices_for_leagues": "Successfully retrieved prices for all leagues",
+      "snapshot": "A new snapshot was successfully created and saved"
     }
   },
   "error": {
     "title": {
       "init_session": "Initialize session failed",
-      "validate_session": "Validate session failed"
+      "validate_session": "Validate session failed",
+      "get_stash_tabs": "Failed retrieving stash tabs for {{param}}",
+      "get_items": "Failed retrieving items for {{param}}",
+      "price_stash_items": "Failed pricing items",
+      "get_prices_for_leagues": "Failed retrieving prices for leagues",
+      "snapshot": "Failed creating snapshot"
     },
     "description": {
-      "init_session": "Session could not be initiated",
-      "validate_session": "Session could not be validated"
+      "init_session": "A new session could not be initiated",
+      "validate_session": "The session could not be validated",
+      "get_stash_tabs": "Failed in retrieving stash tabs for {{param}}",
+      "get_items": "Failed in retrieving items for {{param}}",
+      "price_stash_items": "Items in the selected stash tabs could not be priced",
+      "get_prices_for_leagues": "Failed in retrieving prices for leagues",
+      "snapshot": "The snapshot could not be created"
     }
   },
   "warning": {},
