Minor table improvements

--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -10,9 +10,13 @@
     "calculated": "Price",
     "total": "Total"
   },
-    "label": {
-      "stash_tab_placeholder": "No stash items found",
-      "select_stash_tabs": "No stash items found",
-      "stash_tab_dropdown_placeholder": "No stash tabs found"
-    }
+  "label": {
+    "stash_tab_placeholder": "No stash items found",
+    "select_stash_tabs": "No stash items found",
+    "stash_tab_dropdown_placeholder": "No stash tabs found"
+  },
+  "value": {
+    "true": "Yes",
+    "false": "No"
+  }
 }
