--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -11,7 +11,7 @@
     "total": "Total"
   },
   "label": {
-    "stash_tab_placeholder": "No stash items found",
+    "item_table_placeholder": "No items found for the selected profile",
     "select_stash_tabs": "No stash items found",
     "stash_tab_dropdown_placeholder": "No stash tabs found"
   },
