Enhancements to toolbar, with notifications, sign out options and more

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -35,6 +35,7 @@
     "total_value": "Net worth",
     "total_items": "Items",
     "total_snapshots": "Snapshots",
-    "session_id_link": "How to find your session id"
+    "session_id_link": "How to find your session id",
+    "sign_out": "Sign out"
   }
 }
