--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -13,7 +13,8 @@
   "label": {
     "item_table_placeholder": "No items found for the selected profile",
     "select_stash_tabs": "No stash items found",
-    "stash_tab_dropdown_placeholder": "No stash tabs found"
+    "stash_tab_dropdown_placeholder": "No stash tabs found",
+    "search_text": "Search items"
   },
   "value": {
     "true": "Yes",
