--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -36,6 +36,12 @@
     "total_items": "Items",
     "total_snapshots": "Snapshots",
     "session_id_link": "How to find your session id",
-    "sign_out": "Sign out"
+    "sign_out": "Sign out",
+    "edit_profile_icon_title": "Edit profile",
+    "create_profile_icon_title": "Create profile",
+    "fetch_snapshot_icon_title": "Fetch snapshot",
+    "remove_snapshot_icon_title": "Remove snapshots",
+    "notification_icon_title": "Notifications",
+    "account_icon_title": "My account"
   }
 }
