--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -6,6 +6,7 @@
     "reset": "Reset",
     "back": "Back",
     "cancel": "Cancel",
+    "confirm": "Confirm",
     "save_profile": "Save profile",
     "create_profile": "Create profile",
     "new_profile": "New profile"
@@ -18,7 +19,8 @@
     "create_profile": "Create new profile",
     "enter_acc_info": "Enter account information",
     "select_leagues": "Select your leagues",
-    "select_characters": "Select your characters"
+    "select_characters": "Select your characters",
+    "confirm_clear_snapshots": "Clear snapshots for profile"
   },
   "label": {
     "account_name": "Account name",
@@ -43,5 +45,8 @@
     "remove_snapshot_icon_title": "Remove snapshots",
     "notification_icon_title": "Notifications",
     "account_icon_title": "My account"
+  },
+  "body": {
+    "clear_snapshots": "Are you sure you want to clear all snapshots for the current profile?"
   }
 }
