--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -8,7 +8,8 @@
       "get_items": "Retrieved items for {{param}}",
       "price_stash_items": "Items were successfully priced",
       "get_prices_for_leagues": "Retrieved prices for all leagues",
-      "snapshot": "Snapshot created successfully"
+      "snapshot": "Snapshot created successfully",
+      "new_update_found": "New release was found"
     },
     "description": {
       "init_session": "A new session was successfully initiated",
@@ -18,7 +19,8 @@
       "get_items": "Items for {{param}} were successfully retrieved",
       "price_stash_items": "Items in the selected stash tabs were successfully priced",
       "get_prices_for_leagues": "Successfully retrieved prices for all leagues",
-      "snapshot": "A new snapshot was successfully created and saved"
+      "snapshot": "A new snapshot was successfully created and saved",
+      "new_update_found": "A new release was found on GitHub"
     }
   },
   "error": {
@@ -30,7 +32,8 @@
       "get_items": "Failed retrieving items for {{param}}",
       "price_stash_items": "Failed pricing items",
       "get_prices_for_leagues": "Failed retrieving prices for leagues",
-      "snapshot": "Failed creating snapshot"
+      "snapshot": "Failed creating snapshot",
+      "check_for_update": "Could not check for update"
     },
     "description": {
       "init_session": "A new session could not be initiated",
@@ -39,7 +42,8 @@
       "get_items": "Failed in retrieving items for {{param}}",
       "price_stash_items": "Items in the selected stash tabs could not be priced",
       "get_prices_for_leagues": "Failed in retrieving prices for leagues",
-      "snapshot": "The snapshot could not be created"
+      "snapshot": "The snapshot could not be created",
+      "check_for_update": "Something went wrong when checking for update"
     },
     "custom_description" :{
       "no_stash_tabs_selected_for_profile": "No stash tabs are selected for the profile",
