--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -48,7 +48,11 @@
     "notification_icon_title": "Notifications",
     "session_id_icon_title": "Help finding session ID",
     "account_icon_title": "My account",
-    "net_worth_export": "Export data"
+    "net_worth_export": "Export data",
+    "update_available": "Version {{version}} available"
+  },
+  "link": {
+    "restart_now": "Restart now"
   },
   "body": {
     "clear_snapshots": "Are you sure you want to clear all snapshots for the current profile?",
