--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -60,7 +60,9 @@
     "not_available": "N/A",
     "low_confidence_pricing": "Activate low confidence pricing",
     "price_treshold": "Select price treshold",
-    "requires_snapshot_info": "* = requires a new snapshot to take effect"
+    "requires_snapshot_info": "* = requires a new snapshot to take effect",
+    "fetch_snapshot_spinner_title": "Fetching snapshots",
+    "initiating_session_spinner_title": "Initiating session"
   },
   "value": {
     "none": "None",
