--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -15,7 +15,8 @@
       "api_update_profile": "Uploaded changes to profile to server",
       "api_remove_profile": "Uploaded removal of profile to server",
       "api_create_snapshot": "Uploaded snapshot to server",
-      "api_upload_items": "Uploaded items to server"
+      "api_upload_items": "Uploaded items to server",
+      "reconnected": "Successfully reconnected to the server"
     },
     "description": {
       "init_session": "A new session was successfully initiated",
@@ -32,7 +33,8 @@
       "api_update_profile": "New data was uploaded to the server",
       "api_remove_profile": "New data was uploaded to the server",
       "api_create_snapshot": "New data was uploaded to the server",
-      "api_upload_items": "New data was uploaded to the server"
+      "api_upload_items": "New data was uploaded to the server",
+      "reconnected": "The connection to the server was reestablished"
     }
   },
   "error": {
@@ -51,7 +53,8 @@
       "api_update_profile": "Could not upload profile changes",
       "api_remove_profile": "Could not upload profile changes",
       "api_create_snapshot": "Could not upload snapshot",
-      "api_upload_items": "Could not upload items"
+      "api_upload_items": "Could not upload items",
+      "connection_lost": "Connection to server was lost"
     },
     "description": {
       "init_session": "A new session could not be initiated",
@@ -67,7 +70,8 @@
       "api_update_profile": "Failed when trying to upload changes to server",
       "api_remove_profile": "Failed when trying to upload changes to server",
       "api_create_snapshot": "Failed when trying to upload snapshot to server",
-      "api_upload_items": "Failed when trying to upload items to server"
+      "api_upload_items": "Failed when trying to upload items to server",
+      "connection_lost": "We could not establish a connection to the server"
     },
     "custom_description" :{
       "no_stash_tabs_selected_for_profile": "No stash tabs are selected for the profile",
